pkg/crates/abacus-core/src/llm/providers/snapshots/abacus_core__llm__providers__gemini__tests__snapshot_gemini_pro_budget_8192.snap
---
source: crates/abacus-core/src/llm/providers/gemini.rs
assertion_line: 437
expression: snapshot_gemini_fields(&body)
---
{
  "generationConfig": {
    "maxOutputTokens": 8192,
    "temperature": 0.7,
    "thinkingConfig": {
      "includeThoughts": true,
      "thinkingBudget": 8192
    }
  }
}
