pkg/crates/abacus-core/src/llm/providers/snapshots/abacus_core__llm__providers__gemini__tests__snapshot_gemini_pro_no_intent.snap
---
source: crates/abacus-core/src/llm/providers/gemini.rs
assertion_line: 464
expression: snapshot_gemini_fields(&body)
---
{
  "generationConfig": {
    "maxOutputTokens": 8192,
    "temperature": 0.7
  }
}
